--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,2 +1,6 @@
-@import "./Map.scss";
-@import "./App.scss";
+@import "Map.scss";
+@import "App.scss";
+@import "Nav.scss";
+@import "Footer.scss";
+@import "Benefits.scss";
+@import "../node_modules/react-lazy-load-image-component/src/effects/blur.css";
